--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <p>Hello World!</p>
+    <form action="https://www.google.com/search" method="GET" class="formbox">
+        <input type="text" name="q" type="search">
+        <input type="Submit" value="search">
+        <!-- <button></button> -->
+    </form>
 </body>
 </html>
